samples/_failures_safe/1761078291_f26781_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8041fc94.c: In function ‘main’:
./samples/SAFE/__tmp_8041fc94.c:164:5: error: expected declaration or statement at end of input
  164 |     add_edge(&g, node_a, node_b, 1);
      |     ^~~~~~~~
